# aieBootstrap

./: .gitignore  CMakeLists.txt
bootstrap/: Application.cpp  Bootstrap.vcxproj  Bootstrap.vcxproj.filters  Font.cpp  Gizmos.cpp  Renderer2D.cpp  Shader.cpp  SoundManager.cpp  tiny_obj_loader.h
dependencies/libsndfile/include/: sndfile.h
project2D/: Application2D.cpp  Application2D.h  CMakeLists.txt
project3D/: CMakeLists.txt
